--- a/fg/16/puzzle.html
+++ b/fg/16/puzzle.html
@@ -1,4 +1,6 @@
 <html>
+  
+<meta name="robots" content="noindex, nofollow">
 <body>
 See <a href="puzzle/index.html">index page</a> in folder "puzzle." 
 </body>
