--- a/dir1/index.html
+++ b/dir1/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  
+<meta name="robots" content="noindex, nofollow">
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
