Try finite-geometry home page HTML

--- a/index.html
+++ b/index.html
@@ -3,8 +3,260 @@
 <meta name="robots" content="noindex, nofollow">
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<!- comment ->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
+<head>
+<!-- Original URL: http://www.finitegeometry.org/sc/index.html
+Date Downloaded: 1/9/2016 12:17:44 AM !-->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!--project01-->
+  <title>Finite Geometry of the Square and Cube - Home Page</title>
+  <meta name="KEYWORDS" content="finite geometry, graphic design, tessellations,  projective space, group theory, finite groups, symmetry, symmetric, invariance, mathieu groups, cullinane, automorphisms, permutation groups, permutations, spreads, latin squares" />
+  <meta name="DESCRIPTION" content="Surprising symmetry properties of the 4x4x4 cube-- the mathematical structure, not the puzzle. " />
+  
+</head>
+<body leftmargin="100" rightmargin="20">
+<!--Navigate-->
+<table width="620" cellpadding="12" cellspacing="0">
+  <tbody>
+    <tr bgcolor="#000000">
+      <td bgcolor="#000000"> <strong><font color="#ffffff"> <small><small>Finite
+Geometry
+Notes</small></small></font></strong> <small><small> <nobr>
+&nbsp; <font color="#ffffff">|</font> <a href="index.html"> <font color="#ffffff">
+Home</font></a> <font color="#ffffff">|</font> <a href="map.html"> <font color="#ffffff">Site
+Map</font></a> <font color="#ffffff">|</font> <a href="author.html"> <font color="#ffffff">
+Author</font></a> <font color="#ffffff">|</font> </nobr> </small></small>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<!--EndNavigate-->
+<table width="620">
+  <tbody>
+    <tr>
+      <td>
+      <div align="center"><font size="1">&nbsp;</font><br />
+      </div>
+      <table width="580" align="center" border="2" bordercolor="black" cellpadding="8" cellspacing="0" rules="none">
+        <tbody>
+          <tr>
+            <td align="center"><img alt="4x4x4 cube" src="index_files/GridCube165C3.jpg" vspace="8" width="165" align="middle" border="0" height="191" hspace="4" /></td>
+            <td>
+            <h3>Finite Geometry<br />
+of the Square<br />
+and Cube<br />
+            <br />
+            <small><small>by Steven H. Cullinane</small></small></h3>
+            </td>
+          </tr>
+          <tr align="center">
+            <td colspan="2">
+            <p>This site is about the<br />
+            </p>
+            <blockquote><a href="64/index.html">Geometry
+of the 4x4x4 Cube</a><br />
+            </blockquote>
+            <p> (the mathematical structure,<br />
+&nbsp;not the mechanical puzzle)<br />
+and related simpler structures.</p>
+            <p>For applications of this sort<br />
+of geometry to physics, see<br />
+            <a href="../quant.html">Quantum Information Theory</a>.<br />
+&nbsp;<br />
+            </p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div align="center"> <br />
+      <div align="left">For some of the simpler substructures of the
+4x4x4 cube, see<br />
+      <blockquote><a href="4/index.html">Geometry
+of
+the
+2x2
+Square</a>,<br />
+        <a href="8/index.html">Geometry of
+the 2x2x2 Cube</a>, and<br />
+        <a href="16/index.html">Geometry
+of the 4x4 Square.</a><br />
+      </blockquote>
+      </div>
+      </div>
+      <div align="left"> </div>
+      <div align="left">These traditional and supposedly
+well-known structures are, surprisingly, closely related to
+small finite
+geometries.<br />
+      <br />
+      <div align="left">These finite geometries underlie some
+remarkable symmetries of
+graphic
+designs.&nbsp; For instance, there is a group G of 322,560
+natural transformations which, acting on the four-diamond figure D
+below, <a href="http://diamondtheorem.com/">always yields a symmetric
+image</a>.&nbsp; This group turns out to also be
+the automorphism group of the 16-point four-dimensional finite affine
+space.<br />
+      </div>
+      <div align="left"><br />
+      </div>
+      </div>
+      <div align="center"> </div>
+      <div align="center"> </div>
+      <div align="center"><img alt="Example of symmetry in a 4x4 design" src="index_files/AbstrExample3.jpg" width="551" height="346" /><br />
+      </div>
+      <div align="center"> <br />
+For an animated illustration, <a href="16/DTanim.html">click here</a>.<br />
+      <br />
+      <div align="left">Such designs are formed by assembling
+two-colored square tiles or
+two-colored cubical blocks
+into larger squares or cubes, when the number of tiles or blocks in the
+larger arrays is a
+power of two.<br />
+      <br />
+      <div align="left">The structure underlying such graphic
+symmetries is that of finite
+projective geometry:<br />
+      </div>
+      </div>
+      <div align="center"> <br />
+      </div>
+      </div>
+      <div align="center"> <img alt="Small finite spaces" src="index_files/SmallSpaces.gif" width="483" height="1072" /><br />
+      </div>
+      <br />
+Similar structural diagrams can be made for the
+64 and 63 points of, respectively, finite affine and projective spaces
+of 6 and 5 dimensions over the 2-element field, and the graphic
+symmetries that result generalize the results in fewer dimensions.<br />
+      <br />
+      <div align="center">
+      <div align="left">For a more detailed example of how affine and
+projective points are
+related in such models, click on the image below.<br />
+      </div>
+      <br />
+      <a href="8/plane.html"><img alt="The eightfold cube and inner structure" src="index_files/Eightfold.gif" width="497" border="0" height="831" /></a><br />
+      </div>
+      <div align="center"> <br />
+      </div>
+      <div align="center">
+      <div align="center">An earlier presentation<br />
+of the above seven partitions<br />
+of the eightfold cube:<br />
+      <br />
+      </div>
+      <table width="450" align="center" border="2" bordercolor="black" cellpadding="24" cellspacing="0">
+        <tbody>
+          <tr>
+            <td valign="top">
+            <div align="center"><img src="index_files/ThirdGift.jpg" alt="Seven partitions of the 2x2x2 cube in a book from 1906" /></div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      </div>
+      <br />
+      <br />
+When the number of tiles or blocks in a square or cubical array is a
+power of an
+odd prime, symmetry of a different sort results.&nbsp; In the
+power-of-two
+case, despite the designs' overall symmetry,&nbsp; the natural
+permutations interchanging tiles or blocks are generally
+asymmetric.&nbsp; In the odd-prime case, there is no natural way to
+form symmetric graphic designs, but, on the other hand, the natural
+permutations of tiles or blocks are themselves always symmetric.<br />
+      <br />
+For the some of the simplest examples of the odd-prime case, see <br />
+      <a href="9/index.html"><br />
+Geometry of the 3x3 Square</a> and<br />
+      <a href="13/cubist.html">Geometry of
+the 3x3x3 Cube</a>.<br />
+      <br />
+For a more detailed look at these topics, see<br />
+      <a href="map.html"><br />
+      </a> <a href="map.html">Notes on
+Finite Geometry (the detailed
+site map for this website)</a>.<br />
+      <br />
+      <table width="580" align="center" border="2" bordercolor="black" cellpadding="24" cellspacing="0" rules="none">
+        <tbody>
+          <tr>
+            <td align="center">&nbsp; <b>Some Context</b><br />
+            <div align="left">
+            <div class="storycontent">
+            <p><a href="http://books.google.com/books?id=s37rhfWs73QC"><em>Towards
+a
+Philosophy
+of
+Real
+Mathematics</em></a>, by David Corfield, Cambridge
+U. Press, 2003, <a href="http://books.google.com/books?id=s37rhfWs73QC&amp;pg=PA206#v=onepage&amp;q=&amp;f=false">p.
+206</a>:</p>
+            <p style="padding-left: 30px;">&#8220;Now, it is no easy business
+defining what one means by the term <em>conceptual</em>&#8230;.
+I think we can say that the conceptual is usually expressible in terms
+of broad principles. A nice example of this comes in the form of
+harmonic analysis, which is based on the idea, whose scope has been
+shown by George Mackey (1992) to be immense, that many kinds of entity
+become easier to handle by decomposing them into components belonging
+to spaces invariant under specified symmetries.&#8221;</p>
+            <p>For a simpler example of this idea, see the entities in <a href="16/dtheorem.html">The Diamond
+Theorem</a>, the decomposition in <a href="gen/mapsys.html">A Four-Color
+Theorem</a>, and the space in <a href="16/geometry.html">Geometry of the
+4&times;4 Square</a>. The decomposition differs from that of harmonic
+analysis, although the
+subspaces involved in the diamond theorem are isomorphic to <a href="gen/walsh.html">Walsh functions</a>&#8211;
+well-known
+as
+discrete
+analogues
+of
+the
+trigonometric functions of traditional harmonic
+analysis.</p>
+            </div>
+            </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <br />
+      </td>
+    </tr>
+  </tbody>
+</table>
+<br />
+<!--footer-->
+</body>
+</html>
+f harmonic
+analysis, although the
+subspaces involved in the diamond theorem are isomorphic to <a href="http://finitegeometry.org/sc/gen/walsh.html">Walsh functions</a>&#8211;
+well-known
+as
+discrete
+analogues
+of
+the
+trigonometric functions of traditional harmonic
+analysis.</p>
+            </div>
+            </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <br />
+      </td>
+    </tr>
+  </tbody>
+</table>
+<br />
+<!--footer-->
 </body>
 </html>
