--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Date Downloaded: 1/9/2016 12:17:44 AM !-->
   
 </head>
 <body leftmargin="100" rightmargin="20">
-  <p>This is a partial import to github of http://finitegeometry.org/sc/.</p>
+  <p>This is an import to GitHub of the Jan. 9, 2016, version of http://finitegeometry.org/sc/.</p>
 <!--Navigate-->
 <table width="620" cellpadding="12" cellspacing="0">
   <tbody>
